examples/test/testpolicy17451.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17451
  namespace: namespace57
spec:
  podSelector:
    matchLabels:
      key21: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value17
          key2: value3
          key6: value19
      podSelector:
        matchLabels:
          key42: value12
